--- a/Assets/osx/KFAboutWindow.xib
+++ b/Assets/osx/KFAboutWindow.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14C81f" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
     </dependencies>
     <objects>
@@ -19,7 +20,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="KFAboutWindow" animationBehavior="default" id="1">
+        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="KFAboutWindow" animationBehavior="default" id="1" customClass="KFAboutWindow">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
             <rect key="contentRect" x="196" y="240" width="560" height="320"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1177"/>
@@ -168,14 +169,14 @@
                                 </buttonCell>
                                 <connections>
                                     <action selector="visitWebsiteAction:" target="-2" id="OGj-ti-iba"/>
-                                    <binding destination="-2" name="hidden" keyPath="self.websiteURL" id="ELL-Ti-VCC">
-                                        <dictionary key="options">
-                                            <string key="NSValueTransformerName">NSIsNil</string>
-                                        </dictionary>
-                                    </binding>
                                     <binding destination="-2" name="title" keyPath="self.bundleName" id="joT-Mt-cHm">
                                         <dictionary key="options">
                                             <string key="NSValueTransformerName">KFWebsiteButtonBundleNameTransformer</string>
+                                        </dictionary>
+                                    </binding>
+                                    <binding destination="-2" name="hidden" keyPath="self.websiteURL" id="ELL-Ti-VCC">
+                                        <dictionary key="options">
+                                            <string key="NSValueTransformerName">NSIsNil</string>
                                         </dictionary>
                                     </binding>
                                 </connections>
